added dto classes

--- a/DtoLayer/DtoLayer.csproj
+++ b/DtoLayer/DtoLayer.csproj
@@ -6,4 +6,26 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="AboutDto\" />
+    <None Remove="BookingDto\" />
+    <None Remove="CategoryDto\" />
+    <None Remove="ContactDto\" />
+    <None Remove="DiscountDto\" />
+    <None Remove="FeatureDto\" />
+    <None Remove="ProductDto\" />
+    <None Remove="SocialMediaDto\" />
+    <None Remove="TestimonialDto\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="AboutDto\" />
+    <Folder Include="BookingDto\" />
+    <Folder Include="CategoryDto\" />
+    <Folder Include="ContactDto\" />
+    <Folder Include="DiscountDto\" />
+    <Folder Include="FeatureDto\" />
+    <Folder Include="ProductDto\" />
+    <Folder Include="SocialMediaDto\" />
+    <Folder Include="TestimonialDto\" />
+  </ItemGroup>
 </Project>
